modified plotting, train_tune_LoRA.ipynb and pyscript2.py

--- a/train_tune_LoRA.ipynb
+++ b/train_tune_LoRA.ipynb
@@ -702,7 +702,7 @@
     "        model, _ = load_qwen()\n",
     "\n",
     "        # Train model and compute loss/perplexity\n",
-    "        trained_model, final_loss, _, _ = train_lora_model(model, tokenizer, lora_rank=r, learning_rate=lr, train_steps=1000)\n",
+    "        trained_model, final_loss, grad_norm_list, train_loss_list = train_lora_model(model, tokenizer, lora_rank=r, learning_rate=lr, train_steps=1000)\n",
     "        ppl_train = np.exp(final_loss)\n",
     "\n",
     "        # Compute validation loss and perplexity\n",
@@ -725,6 +725,7 @@
     "        print(f\"-> Train Loss: {final_loss:.4f}, Perplexity: {ppl_train:.2f}\")\n",
     "        print(f\"-> Validation Loss: {val_loss:.4f}, Perplexity: {ppl_val:.2f}\")\n",
     "        print(f\"-> Estimated Flops: {total_flops_estimate}\")\n",
+    "        grad_norm_loss_plot(train_loss_list, grad_norm_list, title=f'Learning Rate = {lr}, Rank = {r}', avg_val_loss=val_loss)\n",
     "\n",
     "        # Clean up to free GPU memory\n",
     "        del model\n",
@@ -874,7 +875,7 @@
     "    # Load fresh model\n",
     "    model, _ = load_qwen()\n",
     "    # Train the model and compute loss\n",
-    "    trained_model, final_loss, _, _ = train_lora_model(model, tokenizer, lora_rank=best_r, learning_rate=best_lr, max_ctx_length=cl, train_steps=1000)\n",
+    "    trained_model, final_loss, grad_norm_list, train_loss_list = train_lora_model(model, tokenizer, lora_rank=best_r, learning_rate=best_lr, max_ctx_length=cl, train_steps=1000)\n",
     "    ppl_train = np.exp(final_loss)\n",
     "\n",
     "\n",
@@ -900,6 +901,8 @@
     "    print(f\"-> Train Loss: {final_loss:.4f}, Perplexity: {ppl_train:.2f}\")\n",
     "    print(f\"-> Validation Loss: {val_loss:.4f}, Perplexity: {ppl_val:.2f}\")\n",
     "    print(f\"-> Estimated Flops: {total_flops_estimate}\")\n",
+    "\n",
+    "    grad_norm_loss_plot(train_loss_list, grad_norm_list, title=f'LR= {best_lr}, Rank = {best_r}, Context Length = {cl} ', avg_val_loss=val_loss)\n",
     "\n",
     "    # Clean up to free GPU memory\n",
     "    del model\n",
