--- a/train_tune_LoRA.ipynb
+++ b/train_tune_LoRA.ipynb
@@ -1774,7 +1774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 15000 Steps Experiment"
+    "# 5000 Steps Experiment Repeated With Different HP Choice"
    ]
   },
   {
@@ -1809,13 +1809,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Set seed\n",
-    "torch.manual_seed(24)\n",
+    "torch.manual_seed(23)\n",
     "torch.cuda.empty_cache() #Clean gpu memory for next experiment"
    ]
   },
@@ -1828,8 +1828,8 @@
     "# Follecting from previus results\n",
     "\n",
     "r_opt = 8 # Optimal Rank\n",
-    "lr_opt = 1e-4 # optimal Learning Rate\n",
-    "cl_opt = 768 # Optimal Context Length\n"
+    "lr_opt = 1e-5 # optimal Learning Rate\n",
+    "cl_opt = 512 # Optimal Context Length\n"
    ]
   },
   {
@@ -1881,7 +1881,7 @@
     }
    ],
    "source": [
-    "model_opt_train2, loss_train2, grad_norm_values2, loss_values2 = train_lora_model(model_opt, tokenizer, lora_rank=r_opt, learning_rate=lr_opt, batch_size=4, max_ctx_length=cl_opt,train_steps=15000) # Training model"
+    "model_opt_train2, loss_train2, grad_norm_values2, loss_values2 = train_lora_model(model_opt, tokenizer, lora_rank=r_opt, learning_rate=lr_opt, batch_size=4, max_ctx_length=cl_opt,train_steps=5000) # Training model"
    ]
   },
   {
@@ -1935,7 +1935,7 @@
     "intermediate_dim = 2*d_model  # SwiGLU\n",
     "\n",
     "#  Computing total estimate of flops\n",
-    "total_flops_for_best_model = total_transformer_training_flops(15000, 4, cl_opt, num_layers, d_model, num_heads, intermediate_dim, lora_rank=r_opt)\n",
+    "total_flops_for_best_model = total_transformer_training_flops(5000, 4, cl_opt, num_layers, d_model, num_heads, intermediate_dim, lora_rank=r_opt)\n",
     "\n",
     "# collecting results\n",
     "collecting_results = [[loss_train2, ppl_best_train, \n",
@@ -1953,7 +1953,7 @@
     "\n",
     "# Save results\n",
     "\n",
-    "best_model_results_df.to_csv(\"experiment_results/raw_performance_experiment_results/best_model_trval_loss_ppl.csv\")"
+    "best_model_results_df.to_csv(\"experiment_results/tuned_lora_3c_5000/best_model_trval_loss_ppl.csv\")"
    ]
   },
   {
@@ -1998,10 +1998,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savez(\"experiment_results/raw_performance_experiment_results/predictions_decoded_best.npz\", *predictions_decoded2)\n",
-    "MSE_loaded = np.save(\"experiment_results/raw_performance_experiment_results/MSE_values_best.npy\", np.array(MSE_values2))\n",
-    "np.save('experiment_results/raw_performance_experiment_results/RMSE_values_best', RMSE_values2)\n",
-    "np.savez(\"experiment_results/raw_performance_experiment_results/error_per_system_best.npz\", *error_per_system2)"
+    "np.savez(\"experiment_results/tuned_lora_3c_5000/predictions_decoded_best.npz\", *predictions_decoded2)\n",
+    "MSE_loaded = np.save(\"experiment_results/tuned_lora_3c_5000/MSE_values_best.npy\", np.array(MSE_values2))\n",
+    "np.save('experiment_results/tuned_lora_3c_5000/RMSE_values_best', RMSE_values2)\n",
+    "np.savez(\"experiment_results/tuned_lora_3c_5000/error_per_system_best.npz\", *error_per_system2)"
    ]
   },
   {
