--- a/train_tune_LoRA.ipynb
+++ b/train_tune_LoRA.ipynb
@@ -2062,6 +2062,59 @@
     "collective_plots(predicted_encoded2, tokenizer)\n",
     "grad_norm_loss_plot(loss_values2, grad_norm_values2) # printing loss and grad norm over training steps"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Total Number of FLOPs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remaining FLOPs budget: 70915089645568000\n"
+     ]
+    }
+   ],
+   "source": [
+    "initial_budget = 10**17\n",
+    "\n",
+    "# Training procedure no tuning\n",
+    "FLOPs_train_no_hp_tuned = 5983174656000000\n",
+    "\n",
+    "# HP search total FLOPs\n",
+    "\n",
+    "# Rank + Learning-Rate\n",
+    "search_1 = 1195577966592000*3 # This number of FLOPs has occurred 3 times\n",
+    "search_2 = 1196634931200000*3 # This number of FLOPs has occurred 3 times\n",
+    "search_3 = 1198748860416000*3 # This number of FLOPs has occurred 3 times\n",
+    "\n",
+    "# Context Length\n",
+    "search_clx_1 = 297875275776000\n",
+    "search_clx_2 = 1198748860416000\n",
+    "search_clx_3 = 1805371047936000\n",
+    "\n",
+    "# Total FLOPs hp search\n",
+    "\n",
+    "Total_FLOPS_hp_search = search_1 + search_2 + search_3 + search_clx_1 + search_clx_2 + search_clx_3\n",
+    "\n",
+    "# Training experiment 1 hp optimal\n",
+    "FLOPs_train_hp_tuned_1 = 9026855239680000\n",
+    "\n",
+    "# Training experiment 2 hp optimal\n",
+    "#FLOPs_train_hp_tuned_2 = \n",
+    "\n",
+    "remaining_FLOPs_budget = initial_budget - (FLOPs_train_no_hp_tuned + Total_FLOPS_hp_search + FLOPs_train_hp_tuned_1) \n",
+    "\n",
+    "print('Remaining FLOPs budget:', remaining_FLOPs_budget)\n"
+   ]
   }
  ],
  "metadata": {
