--- a/train_tune_LoRA.ipynb
+++ b/train_tune_LoRA.ipynb
@@ -2125,19 +2125,147 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Total Number of FLOPs"
+    "# Determine Model Perfoemance Based on Metrics Comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have trained 3 models, each with 5000 steps, now we want to determine which model prediction forecasing works the best?\n",
+    "\n",
+    "1. Model 1, fine-tuning Qwen2.5-0.5B with LoRA layers, rank = 4, learning rate = 1e-5, and context length = 512 (default settings)\n",
+    "2. Model 2, HP tuning of Qwen2.5-0.5B with LoRA layers, rank = 8, learning rate = 0.0001, and context length = 768\n",
+    "3. Model 3, HP tuning of Qwen2.5-0.5B with LoRA layers, rank = 8, learning rate = 0.0001, and context length = 512"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Metric Results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "MSE1 = np.load(\"experiment_results/trained_lora_3a_5000/MSE_values_3a.npy\")\n",
+    "MSE2 = np.load(\"experiment_results/best_model_results/MSE_values_best.npy\")\n",
+    "MSE3 = np.load(\"experiment_results/tuned_lora_3c_hp_5000/MSE_values_best.npy\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model 1\n",
+    "\n",
+    "prey_mse_avg1 = np.average(MSE1[:,0]) # MSE average prey\n",
+    "predator_mse_avg1 = np.average(MSE1[:,1]) # MSE average predator\n",
+    "model1_mse_avg = np.average(MSE1) # Overall MSE average \n",
+    "\n",
+    "# Model 2\n",
+    "\n",
+    "prey_mse_avg2 = np.average(MSE2[:,0]) # MSE average prey\n",
+    "predator_mse_avg2 = np.average(MSE2[:,1]) # MSE average predator\n",
+    "model2_mse_avg = np.average(MSE2) # Overall MSE average \n",
+    "\n",
+    "# Model 3\n",
+    "\n",
+    "prey_mse_avg3 = np.average(MSE3[:,0]) # MSE average prey\n",
+    "predator_mse_avg3 = np.average(MSE3[:,1]) # MSE average predator\n",
+    "model3_mse_avg = np.average(MSE3) # Overall MSE average "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Remaining FLOPs budget: 70915089645568000\n"
+      "Average MSE values for model 1: 0.8332, prey average MSE: 1.1271, predator average MSE: 0.5393\n",
+      "Average MSE values for model 2: 0.5290, prey average MSE: 0.7613, predator average MSE: 0.2966\n",
+      "Average MSE values for model 3: 0.7742, prey average MSE: 1.0555, predator average MSE: 0.4928\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Average MSE values for model 1: {model1_mse_avg:.4f}, prey average MSE: {prey_mse_avg1:.4f}, predator average MSE: {predator_mse_avg1:.4f}')\n",
+    "print(f'Average MSE values for model 2: {model2_mse_avg:.4f}, prey average MSE: {prey_mse_avg2:.4f}, predator average MSE: {predator_mse_avg2:.4f}')\n",
+    "print(f'Average MSE values for model 3: {model3_mse_avg:.4f}, prey average MSE: {prey_mse_avg3:.4f}, predator average MSE: {predator_mse_avg3:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.43800009e-01, 2.85400007e-01, 6.92666666e-01, 5.76466669e-01,\n",
+       "       4.03633346e-01, 1.09640000e+00, 7.76833321e-01, 3.97433335e-01,\n",
+       "       2.29013331e+00, 4.94099991e-01, 3.51066662e-01, 1.33513334e+00,\n",
+       "       1.16669388e-03, 1.78306666e+00, 4.59800018e-01, 2.23533324e-01,\n",
+       "       6.25533335e-01, 6.76133328e-01, 4.83366652e-01, 5.29899980e-01,\n",
+       "       1.44433339e-01, 1.16896667e+00, 8.99999790e-03, 4.96866673e-01,\n",
+       "       2.05566669e-01, 1.02953334e+00, 1.15733347e-01, 8.32833339e-01,\n",
+       "       4.14866698e-01, 4.18733326e-01, 2.03899984e-01, 3.09333327e-02,\n",
+       "       5.98033333e-01, 5.69700003e-01, 3.30000032e-03, 4.89333333e-01,\n",
+       "       3.83266658e-01, 7.73033324e-01, 8.62000013e-02, 1.47266740e-01,\n",
+       "       7.00833339e-01, 4.10033324e-01, 3.85000006e-01, 7.00366681e-01,\n",
+       "       1.30100001e-01, 3.58933324e-01, 1.86700013e-01, 6.13833313e-01,\n",
+       "       3.21233339e-01, 5.17533327e-01, 4.94300000e-01, 1.88313334e+00,\n",
+       "       1.11993334e+00, 2.05699995e-01, 3.50599998e-01, 1.20199998e-01,\n",
+       "       8.13133328e-01, 2.77333330e-01, 1.28226666e+00, 1.72933335e-01,\n",
+       "       1.01806669e+00, 7.10466685e-01, 4.20399999e-01, 1.33496668e+00,\n",
+       "       1.16193332e+00, 2.74700000e-01, 4.80566667e-01, 4.22866673e-01,\n",
+       "       4.50133323e-01, 1.33333363e-02, 2.90666653e-01, 3.43633345e-01,\n",
+       "       1.01393335e+00, 3.14933337e-01, 1.28333330e-01, 2.93800002e-01,\n",
+       "       9.19300038e-01, 3.02566673e-01, 7.37399987e-01, 3.10666690e-01,\n",
+       "       6.32800021e-01, 6.01933326e-01, 1.73733360e-01, 3.06366665e-01,\n",
+       "       3.70633324e-01, 5.36933312e-01, 1.58400001e-01, 5.58033318e-01,\n",
+       "       3.83700003e-01, 2.65666671e-01, 1.43340001e+00, 2.55666663e-01,\n",
+       "       3.13833340e-01, 6.57100000e-01, 2.82799994e-01, 7.50366669e-01,\n",
+       "       2.09100003e-01, 1.18513331e+00, 4.73033322e-01, 5.51833334e-01])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MSE1[:,1]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Total Number of FLOPs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remaining FLOPs budget: 64921345343488000\n"
      ]
     }
    ],
@@ -2167,9 +2295,9 @@
     "FLOPs_train_hp_tuned_1 = 9026855239680000\n",
     "\n",
     "# Training experiment 2 hp optimal\n",
-    "#FLOPs_train_hp_tuned_2 = \n",
+    "FLOPs_train_hp_tuned_2 = 5993744302080000  \n",
     "\n",
-    "remaining_FLOPs_budget = initial_budget - (FLOPs_train_no_hp_tuned + Total_FLOPS_hp_search + FLOPs_train_hp_tuned_1) \n",
+    "remaining_FLOPs_budget = initial_budget - (FLOPs_train_no_hp_tuned + Total_FLOPS_hp_search + FLOPs_train_hp_tuned_1 + FLOPs_train_hp_tuned_2) \n",
     "\n",
     "print('Remaining FLOPs budget:', remaining_FLOPs_budget)\n"
    ]
