--- a/train_tune_LoRA.ipynb
+++ b/train_tune_LoRA.ipynb
@@ -2242,13 +2242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Total FLOPs used: 35078654656512000\n",
       "Remaining FLOPs budget: 64921345343488000\n"
      ]
     }
@@ -2281,8 +2282,10 @@
     "# Training experiment 2 hp optimal\n",
     "FLOPs_train_hp_tuned_2 = 5993744302080000  \n",
     "\n",
-    "remaining_FLOPs_budget = initial_budget - (FLOPs_train_no_hp_tuned + Total_FLOPS_hp_search + FLOPs_train_hp_tuned_1 + FLOPs_train_hp_tuned_2) \n",
+    "Total_FLOP_count = FLOPs_train_no_hp_tuned + Total_FLOPS_hp_search + FLOPs_train_hp_tuned_1 + FLOPs_train_hp_tuned_2\n",
     "\n",
+    "remaining_FLOPs_budget = initial_budget - Total_FLOP_count \n",
+    "print('Total FLOPs used:', Total_FLOP_count)\n",
     "print('Remaining FLOPs budget:', remaining_FLOPs_budget)\n"
    ]
   }
